Add endpoint for listing teacher scheduled classes
This commit includes:1. Add endpoint to list teacher scheduled classes2. Merge two endpoints for listing student scheduled classes into one, allowing start and end date selection
