# src/main/java/com/michael/exercise/controllers/StudentController.java
@@ -1,5 +1,6 @@
 package com.michael.exercise.controllers;
 
+import java.time.LocalDate;
 import java.util.List;
 
 import org.springframework.http.HttpStatus;
@@ -7,13 +8,14 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.michael.exercise.dtos.ScheduleClassRequest;
-import com.michael.exercise.dtos.ScheduledClassesResponse;
 import com.michael.exercise.dtos.StudentPointsRecordsResponse;
 import com.michael.exercise.dtos.StudentPointsResponse;
+import com.michael.exercise.dtos.StudentScheduledClassesResponse;
 import com.michael.exercise.dtos.TeacherAvailabilitiesResponse;
 import com.michael.exercise.dtos.TeachersForStudentResponse;
+import com.michael.exercise.exception.BadRequestException;
 import com.michael.exercise.mappers.StudentPointMapper;
-import com.michael.exercise.mappers.StudentScheduledClassMapper;
+import com.michael.exercise.mappers.ScheduledClassMapper;
 import com.michael.exercise.mappers.TeacherAvailabilityMapper;
 import com.michael.exercise.mappers.TeacherMapper;
 import com.michael.exercise.models.ScheduledClassWithName;
@@ -32,7 +34,7 @@ public class StudentController implements StudentApi {
     private final StudentService studentService;
     private final TeacherMapper teacherMapper;
     private final TeacherAvailabilityMapper teacherAvailabilityMapper;
-    private final StudentScheduledClassMapper studentScheduledClassMapper;
+    private final ScheduledClassMapper scheduledClassMapper;
     private final StudentPointMapper studentPointMapper;
 
     @Override
@@ -63,27 +65,29 @@ public class StudentController implements StudentApi {
     }
 
     @Override
-    public ResponseEntity<ScheduledClassesResponse> listUpcomingScheduledClasses() {
+    public ResponseEntity<StudentScheduledClassesResponse> listStudentScheduledClasses(LocalDate startDate, LocalDate endDate) {
         int studentId = SecurityUtil.getUserId();
-        List<ScheduledClassWithName> scheduledClassesWithName = studentService.listUpcomingScheduledClasses(studentId);
-        ScheduledClassesResponse response = studentScheduledClassMapper.toScheduledClassesResponse(scheduledClassesWithName);
+        // Start date defaults to today
+        if (startDate == null) {
+            startDate = LocalDate.now();
+        }
+        // End date defaults to forever
+        if (endDate == null) {
+            endDate = LocalDate.of(9999, 12, 31);
+        }
+        // Validate date range
+        if (startDate.isAfter(endDate)) {
+            throw new BadRequestException("invalid_date_range", "日期範圍錯誤");
+        }
+        List<ScheduledClassWithName> scheduledClassesWithName = studentService.listScheduledClasses(studentId, startDate, endDate);
+        StudentScheduledClassesResponse response = scheduledClassMapper.toStudentScheduledClassesResponse(scheduledClassesWithName);
         return ResponseEntity
                 .status(HttpStatus.OK)
                 .body(response);
     }
 
     @Override
-    public ResponseEntity<ScheduledClassesResponse> listPastScheduledClasses() {
-        int studentId = SecurityUtil.getUserId();
-        List<ScheduledClassWithName> scheduledClassesWithName = studentService.listPastScheduledClasses(studentId);
-        ScheduledClassesResponse response = studentScheduledClassMapper.toScheduledClassesResponse(scheduledClassesWithName);
-        return ResponseEntity
-                .status(HttpStatus.OK)
-                .body(response);
-    }
-
-    @Override
-    public ResponseEntity<Void> cancelClass(Integer scheduleId) {
+    public ResponseEntity<Void> cancelClassByStudent(Integer scheduleId) {
         int studentId = SecurityUtil.getUserId();
         ScheduledClassWithName scheduledClassWithName = studentService.getScheduledClass(scheduleId);
         studentService.cancelClass(studentId, scheduledClassWithName);
